Functionality for the input email added and extra tooltip

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <label for="email" class="form__label">Email address</label>
         <input type="text" name="email" id="email" placeholder="Your email address..." class="form__input-email" />
         <p class="tooltip">Please provide a valid email address</p>
+        <p class="tooltip-two">Your email has been registered</p>
         <input type="submit" value="Notify Me" class="form__input-submit" />
       </form>
       <img src="images/illustration-dashboard.png" alt="" class="illustration-dashboard" />
@@ -77,6 +78,5 @@
       </p>
     </div>
     <script src="js/main.js"></script>
-    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
 </html>
