Added message for when input field is empty

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <form action="" class="form">
         <label for="email" class="form__label">Email address</label>
         <input type="text" name="email" id="email" placeholder="Your email address..." class="form__input-email" />
+        <p class="tooltip-empty">Whoops! It looks like you forgot to add your email</p>
         <p class="tooltip">Please provide a valid email address</p>
         <p class="tooltip-two">Your email has been registered</p>
         <input type="submit" value="Notify Me" class="form__input-submit" />
